# lib/api-spec/openapi.yaml
@@ -621,6 +621,11 @@ components:
           items:
             type: string
           nullable: true
+        enhancedImages:
+          type: array
+          items:
+            type: string
+          nullable: true
         createdAt:
           type: string
           format: date-time
@@ -657,6 +662,11 @@ components:
           items:
             type: string
           nullable: true
+        enhancedImages:
+          type: array
+          items:
+            type: string
+          nullable: true
         createdAt:
           type: string
           format: date-time
@@ -672,7 +682,7 @@ components:
           type: string
         name:
           type: string
-          enum: [analyse_photos, scrape_listing, generate_script, create_voiceover, presenter_video, compose_video]
+          enum: [enhance_photos, analyse_photos, scrape_listing, generate_script, create_voiceover, presenter_video, compose_video]
         label:
           type: string
         status:
